--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "private": false,
   "dependencies": {
     "fetch": "^1.1.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "natural": "^0.6.3"
   },
   "devDependencies": {
     "jsdom": "^15.1.1",
